[gd_scene load_steps=7 format=3 uid="uid://33d8mtwrggci"]

[ext_resource type="Script" uid="uid://ctetaqhco0qb7" path="res://scenes/object/object.gd" id="1_ri8g6"]
[ext_resource type="Texture2D" uid="uid://gkue1250nv1w" path="res://tilemaps/tilemap_weapons.png" id="2_ygpif"]
[ext_resource type="Script" uid="uid://db4f0r6u6fgfb" path="res://scenes/object/uibox.gd" id="3_wd2lu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xc3qt"]
size = Vector2(32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_kcab4"]
font_color = Color(0.956863, 0.713726, 0.929412, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bvcta"]
bg_color = Color(0.270588, 0.270588, 0.270588, 0.894118)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="object" type="Node2D" groups=["can_save", "persist"]]
position = Vector2(76, 59)
script = ExtResource("1_ri8g6")

[node name="box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box"]
shape = SubResource("RectangleShape2D_xc3qt")

[node name="sprite" type="Sprite2D" parent="box"]
texture = ExtResource("2_ygpif")
region_enabled = true
region_rect = Rect2(32, 32, 32, 32)

[node name="name" type="Label" parent="."]
z_index = 10
offset_left = -28.0
offset_top = -49.0
offset_right = 39.0
offset_bottom = -23.0
label_settings = SubResource("LabelSettings_kcab4")

[node name="Control" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_left = 26.0
offset_top = -20.0
offset_right = 66.0
offset_bottom = 20.0
script = ExtResource("3_wd2lu")

[node name="lbl_name" type="TextEdit" parent="Control"]
self_modulate = Color(0.317647, 1, 1, 1)
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = -2.0
offset_top = -45.0
offset_right = 98.0
offset_bottom = -5.0
theme_override_colors/background_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_font_sizes/font_size = 20
text = "test"

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
clip_contents = false
custom_minimum_size = Vector2(175, 100)
layout_mode = 0
offset_left = 2.0
offset_top = 6.0
offset_right = 177.0
offset_bottom = 206.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bvcta")

[node name="VBoxContainer" type="GridContainer" parent="Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="lbl_health" type="RichTextLabel" parent="Control/ScrollContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "[color=red]Health[/color]
"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="input_health" type="TextEdit" parent="Control/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.588235)
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "10"

[node name="lbl_status" type="RichTextLabel" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[color=lightblue]Status[/color]"
fit_content = true
scroll_active = false

[node name="input_status" type="TextEdit" parent="Control/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.588235)
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="lbl_notes" type="RichTextLabel" parent="Control/ScrollContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
text = "Notes"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="input_notes" type="TextEdit" parent="Control/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_mode = 1

[connection signal="input_event" from="box" to="." method="_on_box_input_event"]
